[Video] Extend Newscast #14 with links, snippets, diagrams